i should commit more lmao

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -22,3 +22,7 @@ commands:
     description: get custom item level in hand
     usage: /<command>
     permission: op
+  getItems:
+    description: Lists all currently registered items
+    usage: /<command>
+    permission: op
