--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.foxils</groupId>
-    <artifactId>GlitchedSmp</artifactId>
-    <version>1.1.0</version>
+    <artifactId>SytheSMP</artifactId>
+    <version>1.2.0</version>
     <packaging>jar</packaging>
 
-    <name>GlitchedSmp</name>
+    <name>SytheSMP</name>
 
     <properties>
         <java.version>21</java.version>
@@ -79,7 +79,7 @@
         <dependency>
             <groupId>me.foxils</groupId>
             <artifactId>foxutils-items</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.12.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
