--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,7 +14,13 @@ commands:
     description: Delete a player's gem data permanently
     usage: /<command> <player>
     permission: op
-  getlevel:
-    description: Get level of the current custom item in your hand
+  getitemlevel:
+    description: Get the level of the current ArtifactItem in your hand
     usage: /<command>
     permission: op
+    aliases: [getlevel, levelget]
+  setitemlevel:
+    description: Set the level of the current ArtifactItem in your hand
+    usage: /<command> <level>
+    permission: op
+    aliases: [setlevel, levelset]
