--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>me.foxils</groupId>
-    <artifactId>ScytheSMP</artifactId>
-    <version>1.3.0</version>
+    <artifactId>scythesmp</artifactId>
+    <version>1.3.3</version>
     <packaging>jar</packaging>
 
     <name>ScytheSMP</name>
@@ -38,6 +38,9 @@
                         <goals>
                             <goal>shade</goal>
                         </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -79,7 +82,7 @@
         <dependency>
             <groupId>me.foxils</groupId>
             <artifactId>foxutils-items</artifactId>
-            <version>1.17.8-SNAPSHOT</version>
+            <version>1.17.13-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
